--- a/mod/modules/app/api/docker-compose.yml
+++ b/mod/modules/app/api/docker-compose.yml
@@ -1,12 +1,12 @@
 networks:
   default:
-    driver: bridge
+    external: true
+    name: modnet
 services:
   api:
     container_name: api
     deploy: {}
     entrypoint: bash -c "m serve port=8000 key=api remote=0 mod=api"
-    environment: []
     image: mod:latest
     ports:
     - 8000:8000
@@ -14,8 +14,9 @@ services:
     shm_size: 100g
     volumes:
     - ~/mod:/root/mod
-    - ~/.mod/server:/root/.mod/server
+    - ~/.mod:/root/.mod
     - ~/.mod/key/api:/root/.mod/key/api
     - ~/.mod/api:/root/.mod/api
-    - ~/mod/mod/modules/api:/root/mod/mod/modules/api
-    working_dir: /root/mod/mod/modules/api
+    - ~/mod/mod/modules/app/api:/root/mod/mod/modules/app/api
+    working_dir: /root/mod/mod/modules/app/api
+version: '3.8'
