heavy refactor of app

--- a/mod/modules/app/app/config.json
+++ b/mod/modules/app/app/config.json
@@ -8,7 +8,7 @@
         "discord": "https://discord.gg/communeai",
         "x": "https://twitter.com/communeaidotorg",
         "comhub": "https://www.comhub.app/",
-        "mods": "/mods",
+        "mods": "/mod/explore",
         "devDiscord": "https://discord.gg/6CpXmP6P",
         "telegram": "https://t.me/communecommunity"
       }
