--- a/config.json
+++ b/config.json
@@ -2,10 +2,11 @@
         "name": "mod",
         "version": "0.1.0",
         "desc": "A Python package for mod utilities",
-        "shortcuts": {"pm": "server.pm", "local": "server", "auth": "server.auth", "client": "server.client"},
+        "shortcuts": {"pm": "pm", "local": "server", "auth": "auth", "client": "client"},
         "routes": {},
         "expose" : ["forward", "info"],
         "port_range": [50050, 50150],
+        "port": 50420,
         "links" :  [
             "~/commune"
         ]
