--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
   mod:
     container_name: mod
     deploy: {}
-    entrypoint: bash -c "m serve port=50420 key=mod remote=0 mod=mod"
+    entrypoint: bash -c "m serve port=50420 key=server remote=0 mod=mod"
     environment: []
     image: mod:latest
     ports:
@@ -14,6 +14,7 @@ services:
     restart: unless-stopped
     shm_size: 100g
     volumes:
-    - ~/mod:/root/mod
+    - ~/mod/mod:/root/mod/mod
     - ~/.mod:/root/.mod
+    - ~/mod:/root/mod
     working_dir: /root/mod
