--- a/mod/modules/app/docker-compose.yml
+++ b/mod/modules/app/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       context: ./
     container_name: app
     deploy: {}
+    entrypoint: bash -c "npm run build && npm run start"
     environment:
     - NEXT_PUBLIC_API_URL=http://0.0.0.0:8000
     image: app:latest
@@ -20,5 +21,20 @@ services:
     - /app/node_modules
     - ~/.mod:/root/.mod
     - ~/mod:/root/mod
+    - /app/.next
     working_dir: /app
+  mod:
+    container_name: mod
+    deploy: {}
+    entrypoint: bash -c "m serve port=50067 key=server remote=0 mod=mod"
+    image: mod
+    ports:
+    - 50067:50067
+    restart: unless-stopped
+    shm_size: 100g
+    volumes:
+    - ~/mod:/root/mod
+    - ~/.mod:/root/.mod
+    - ~/mod/mod/modules/app:/root/mod/mod/modules/app
+    working_dir: /root/mod/mod/modules/app
 version: '3.8'
