--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ uv.lock
 #   in the .venv directory. It is recommended not to include this directory in version control.
 .pixi
 
+!**/*/.gitkeep
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
