--- a/mod/_mods/app/package.json
+++ b/mod/_mods/app/package.json
@@ -16,8 +16,9 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.1.0",
-    "@polkadot/api": "^10.13.1",
-    "@polkadot/extension-dapp": "^0.46.9",
+    "@polkadot/api": "^16.5.1",
+    "@polkadot/extension-dapp": "^0.62.3",
+    "@polkadot/util-crypto": "^13.5.7",
     "@types/mdx": "^2.0.11",
     "bignumber.js": "^9.1.2",
     "framer-motion": "^12.23.6",
