--- a/mod/_mods/bloctime/.env.example
+++ b/mod/_mods/bloctime/.env.example
@@ -4,7 +4,12 @@ MNEMONIC=test test test test test test test test test test test junk
 
 # Base Mainnet Configuration
 BASE_RPC_URL=https://mainnet.base.org
-PRIVATE_KEY=your_private_key_here
+PRIVATE_KEY=
 
-# Network Selection (ganache or base)
-NETWORK=ganache
+# Contract Addresses (filled after deployment)
+STAKING_ADDRESS=
+REGISTRY_ADDRESS=
+MARKETPLACE_ADDRESS=
+INTEGRATION_ADDRESS=
+TOKEN_ADDRESS=
+BLOCTIME_TOKEN_ADDRESS=
