--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,16 @@
-networks:
-  default:
-    external: true
-    name: modnet
+version: '3.8'
+
 services:
-  mod:
-    container_name: mod
-    deploy: {}
-    entrypoint: bash -c "m serve port=50420 key=server remote=0 mod=mod"
-    environment: []
-    image: mod
+  app:
+    build: .
     ports:
-    - 50420:50420
-    restart: unless-stopped
-    shm_size: 100g
+      - "3000:3000"
     volumes:
-    - ~/mod:/root/mod
-    - ~/.mod:/root/.mod
-    - ~/mod:/root/mod
-    working_dir: /root/mod
+      - .:/app
+      - /app/node_modules
+      - /app/.next
+    environment:
+      - NODE_ENV=development
+      - NEXT_PUBLIC_CHAIN_ID=8453
+      - NEXT_PUBLIC_RPC_URL=https://mainnet.base.org
+    command: npm run dev
