--- a/mod/core/app/src/api/docker-compose.yml
+++ b/mod/core/app/src/api/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: api
     deploy: {}
     entrypoint: bash -c "m serve port=8000 key=api remote=0 mod=api"
-    image: mod:latest
+    image: api
     ports:
     - 8000:8000
     restart: unless-stopped
@@ -16,5 +16,6 @@ services:
     - ~/mod:/root/mod
     - ~/.mod:/root/.mod
     - ~/mod/mod/core/app/src/api:/root/mod/mod/core/app/src/api
+    - /var/run/docker.sock:/var/run/docker.sock
     working_dir: /root/mod/mod/core/app/src/api
 version: '3.8'
