--- a/mod/core/api/api/config.json
+++ b/mod/core/api/api/config.json
@@ -1,3 +1,24 @@
 {
-    "port": 8000
+    "port": 8000,
+    "fns" :  [
+                "mods",
+                "names", 
+                "reg", 
+                "mod",
+                "versions",
+                "history",
+                "call",
+                "get",
+                "users", 
+                "user", 
+                "n", 
+                "balance",
+                "versions",
+                "reg_url",
+                "reg_from_info",
+                "hardware",
+                "servers", 
+                "server_exists",
+                "reg_payload"
+                 ]
 }
